working validator bean and some changes